user info endpoint working now; still need to refine it