@@ -3,16 +3,21 @@ package com.gkovan.resource.web.controller;
 import java.util.Collections;
 import java.util.Map;
 
-//import org.springframework.security.core.annotation.AuthenticationPrincipal;
-//import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class UserInfoController {
 
-//    @GetMapping("/user/info")
+    @GetMapping("api/user/info")
+    public Map<String, Object> getUserInfo(@AuthenticationPrincipal Jwt principal) {
+        return Collections.singletonMap("user_name", principal.getClaimAsString("preferred_username"));
+    }
+    
+//    @GetMapping("api/user/info")
 //    public Map<String, Object> getUserInfo(@AuthenticationPrincipal Jwt principal) {
-//        return Collections.singletonMap("user_name", principal.getClaimAsString("preferred_username"));
+//        return Map.of("user_name", "gkovan@hotmail.com");
 //    }
 }
